튜티 예약기능 추가

--- a/src/main/resources/templates/html/Tutor-Detail-View.html
+++ b/src/main/resources/templates/html/Tutor-Detail-View.html
@@ -134,259 +134,264 @@
                                   readonly /><span class="fa fa-calendar"></span>
                               </div>
                             </div>
+가                            <style>
+                              .cell{
+                                pointer-events: none
+                              }
+                            </style>
                             <div class="card-body p-3 p-sm-5">
                               <div class="row text-center mx-0">
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="1200AM">
+                                  <div class="cell py-1" id="1200AM" value="1200AM">
                                     12:00AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="1230AM">
+                                  <div class="cell py-1" id="1230AM" value="1230AM">
                                     12:30AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0100AM">
+                                  <div class="cell py-1" id="0100AM" value="0100AM">
                                     01:00AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0130AM">
+                                  <div class="cell py-1" id="0130AM" value="0130AM">
                                     01:30AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0200AM">
+                                  <div class="cell py-1" id="0200AM" value="0200AM">
                                     02:00AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0230AM">
+                                  <div class="cell py-1" id="0230AM" value="0230AM">
                                     02:30AM
                                   </div>
                                 </div>
                               </div>
                               <div class="row text-center mx-0">
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0300AM">
+                                  <div class="cell py-1" id="0300AM" value="0300AM">
                                     03:00AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0330AM">
+                                  <div class="cell py-1" id="0330AM" value="0330AM">
                                     03:30AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0400AM">
+                                  <div class="cell py-1" id="0400AM" value="0400AM">
                                     04:00AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0430AM">
+                                  <div class="cell py-1" id="0430AM" value="0430AM">
                                     04:30AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0500AM">
+                                  <div class="cell py-1" id="0500AM" value="0500AM">
                                     05:00AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0530AM">
+                                  <div class="cell py-1" id="0530AM" value="0530AM">
                                     05:30AM
                                   </div>
                                 </div>
                               </div>
                               <div class="row text-center mx-0">
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0600AM">
+                                  <div class="cell py-1" id="0600AM" value="0600AM">
                                     06:00AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0630AM">
+                                  <div class="cell py-1" id="0630AM" value="0630AM">
                                     06:30AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0700AM">
+                                  <div class="cell py-1" id="0700AM" value="0700AM">
                                     07:00AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0730AM">
+                                  <div class="cell py-1" id="0730AM" value="0730AM">
                                     07:30AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0800AM">
+                                  <div class="cell py-1" id="0800AM" value="0800AM">
                                     08:00AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0830AM">
+                                  <div class="cell py-1" id="0830AM" value="0830AM">
                                     08:30AM
                                   </div>
                                 </div>
                               </div>
                               <div class="row text-center mx-0">
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0900AM">
+                                  <div class="cell py-1" id="0900AM" value="0900AM">
                                     09:00AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0930AM">
+                                  <div class="cell py-1" id="0930AM" value="0930AM">
                                     09:30AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="1000AM">
+                                  <div class="cell py-1" id="1000AM" value="1000AM">
                                     10:00AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="1030AM">
+                                  <div class="cell py-1" id="1030AM" value="1030AM">
                                     10:30AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="1100AM">
+                                  <div class="cell py-1" id="1100AM" value="1100AM">
                                     11:00AM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="1130AM">
+                                  <div class="cell py-1" id="1130AM"value="1130AM">
                                     11:30AM
                                   </div>
                                 </div>
                               </div>
                               <div class="row text-center mx-0">
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="1200PM">
+                                  <div class="cell py-1" id="1200PM" value="1200PM">
                                     12:00PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="1230PM">
+                                  <div class="cell py-1" id="1230PM" value="1230PM">
                                     12:30PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0100PM">
+                                  <div class="cell py-1" id="0100PM" value="0100PM">
                                     01:00PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0130PM">
+                                  <div class="cell py-1" id="0130PM" value="0130PM">
                                     01:30PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0200PM">
+                                  <div class="cell py-1" id="0200PM" value="0200PM">
                                     02:00PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0230PM">
+                                  <div class="cell py-1" id="0230PM" value="0230PM">
                                     02:30PM
                                   </div>
                                 </div>
                               </div>
                               <div class="row text-center mx-0">
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0300PM">
+                                  <div class="cell py-1" id="0300PM" value="0300PM">
                                     03:00PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0330PM">
+                                  <div class="cell py-1" id="0330PM" value="0330PM">
                                     03:30PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0400PM">
+                                  <div class="cell py-1" id="0400PM" value="0400PM">
                                     04:00PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0430PM">
+                                  <div class="cell py-1" id="0430PM" value="0430PM">
                                     04:30PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0500PM">
+                                  <div class="cell py-1" id="0500PM" value="0500PM">
                                     05:00PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0530PM">
+                                  <div class="cell py-1" id="0530PM" value="0530PM">
                                     05:30PM
                                   </div>
                                 </div>
                               </div>
                               <div class="row text-center mx-0">
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0600PM">
+                                  <div class="cell py-1" id="0600PM" value="0600PM">
                                     06:00PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0630PM">
+                                  <div class="cell py-1" id="0630PM" value="0630PM">
                                     06:30PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0700PM">
+                                  <div class="cell py-1" id="0700PM" value="0700PM">
                                     07:00PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0730PM">
+                                  <div class="cell py-1" id="0730PM" value="0730PM">
                                     07:30PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0800PM">
+                                  <div class="cell py-1" id="0800PM" value="0800PM">
                                     08:00PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0830PM">
+                                  <div class="cell py-1" id="0830PM" value="0830PM">
                                     08:30PM
                                   </div>
                                 </div>
                               </div>
                               <div class="row text-center mx-0">
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0900PM">
+                                  <div class="cell py-1" id="0900PM" value="0900PM">
                                     09:00PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="0930PM">
+                                  <div class="cell py-1" id="0930PM" value="0930PM">
                                     09:30PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="1000PM">
+                                  <div class="cell py-1" id="1000PM" value="1000PM">
                                     10:00PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="1030PM" >
+                                  <div class="cell py-1" id="1030PM" value="1030PM">
                                     10:30PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="1100PM" >
+                                  <div class="cell py-1" id="1100PM" value="1100PM">
                                     11:00PM
                                   </div>
                                 </div>
                                 <div class="col-md-2 col-4 my-1 px-1">
-                                  <div class="cell py-1" id="1130PM" >
+                                  <div class="cell py-1" id="1130PM" value="1130PM">
                                     11:30PM
                                   </div>
                                 </div>
@@ -446,10 +451,10 @@
             <div class="card border-light text-center" style="box-shadow: none">
               <div class="profile-thumbnail mx-auto mt-n6">
                 <img src="" class="card-img-top rounded-circle border-0"
-                     alt="Jose Avatar" id="profile-img"/>
+                     alt="Joseph Portrait" id="profile-img"/>
               </div>
               <div class="card-body">
-                <h2 class="h4 card-title mb-4" id="tutor-name"></h2>
+                <h2 class="h4 card-title mt-6 mb-4" id="tutor-name"></h2>
 
                 <div class="card-subtitle text-gray font-weight-normal mb-2">
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#dc143c" class="bi bi-heart-fill"
