--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Schedule.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Schedule.html
@@ -74,10 +74,11 @@
                             <h2 class="h5 font-weight-normal text-center mt-3 mb-0" id="tutor-name">
                             </h2>
                             <div class="list-group dashboard-menu list-group-sm mt-4">
-                                <a href="#" class="d-flex list-group-item list-group-item-action">Information<span
+                                <a href="/mypage/{user_id}" id="information"
+                                   class="d-flex list-group-item list-group-item-action">Information<span
                                         class="icon icon-xs ml-auto"><span class="fas fa-chevron-right"></span></span>
                                 </a>
-                                <a href="#"
+                                <a href="/mypage/{user_id}/schedule" id="schedule"
                                    class="d-flex list-group-item list-group-item-action active">Schedule<span
                                         class="icon icon-xs ml-auto"><span class="fas fa-chevron-right"></span></span>
                                 </a>
