유효성 검사 버그 수정

--- a/src/main/resources/templates/html/sign-in.html
+++ b/src/main/resources/templates/html/sign-in.html
@@ -61,7 +61,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><span class="fas fa-envelope"></span></span>
                     </div>
-                    <input class="form-control" id="email" placeholder="@E-mail" type="text" aria-label="email address"
+                    <input class="form-control" id="email" placeholder="@E-mail" type="text" aria-label="email address" autocomplete="off"
                       required />
                   </div>
                 </div>
@@ -69,7 +69,7 @@
                 <div class="form-group">
                   <!-- Form -->
                   <div class="form-group">
-                    <label for="password">Password</label>
+                    <label for="password">Password<span class="txt-guide password" style="padding-left:10px; font-size:13px;"></span></label>
                     <div class="input-group mb-4">
                       <div class="input-group-prepend">
                         <span class="input-group-text"><span class="fas fa-unlock-alt"></span></span>
