--- a/src/main/resources/templates/html/Tutor-Detail-View.html
+++ b/src/main/resources/templates/html/Tutor-Detail-View.html
@@ -134,7 +134,7 @@
                                   readonly /><span class="fa fa-calendar"></span>
                               </div>
                             </div>
-가                            <style>
+                            <style>
                               .cell{
                                 pointer-events: none
                               }
