--- a/src/main/resources/templates/html/dashboard/myPage-tutees_CourseHistory.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_CourseHistory.html
@@ -70,14 +70,14 @@
                             </div>
                             <h2 class="h5 font-weight-normal text-center mt-3 mb-0" id="name"></h2>
                             <div class="list-group dashboard-menu list-group-sm mt-4">
-                                 <a href="myPage-tutees_Information.html" class="d-flex list-group-item list-group-item-action">회원 정보<span
+                                 <a href="./{user_id}" id="information" class="d-flex list-group-item list-group-item-action">회원 정보<span
                                         class="icon icon-xs ml-auto"><span
                                         class="fas fa-chevron-right"></span></span> </a>
-                                <a href="myPage-tutees_Schedule.html"
+                                <a href="./{user_id}/schedule" id="schedule"
                                    class="d-flex list-group-item list-group-item-action">수업 일정<span
                                         class="icon icon-xs ml-auto"><span
                                         class="fas fa-chevron-right"></span></span> </a>
-                                <a href="myPage-tutees_CourseHistory.html"
+                                <a href="/{user_id}/history" id="history"
                                    class="d-flex list-group-item list-group-item-action active">히스토리 정보<span
                                         class="icon icon-xs ml-auto"><span
                                         class="fas fa-chevron-right"></span></span> </a>
