myPage-tutees_Information : 회원탈퇴

--- a/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
@@ -211,7 +211,7 @@
                                                             아니오
                                                         </button>
                                                         <form id="withdrawal">
-                                                            <button type="submit" class="btn btn-sm btn-secondary">
+                                                            <button type="button" class="btn btn-sm btn-secondary" id="delete">
                                                                 예, 탈퇴하겠습니다.
                                                             </button>
                                                         </form>
