myPage-tutees_Schedule : 일정 취소하기

--- a/src/main/resources/templates/html/dashboard/myPage-tutees_Schedule.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_Schedule.html
@@ -132,7 +132,7 @@
                                                         </button>
                                                         <button type="button"
                                                                 class="btn btn-link text-danger ml-auto"
-                                                                data-dismiss="modal">
+                                                                data-dismiss="modal" id="reset">
                                                             닫기
                                                         </button>
                                                     </div>
