myPage : 모달창 닫았을때 input초기화

--- a/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
@@ -174,7 +174,7 @@
                                                             인증하기
                                                         </button>
                                                         <button type="button" class="btn btn-link text-danger ml-auto"
-                                                                data-dismiss="modal">닫기
+                                                                data-dismiss="modal" id="reset">닫기
                                                         </button>
                                                     </div>
                                                 </div>
