--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
@@ -215,7 +215,7 @@
                                                         </button>
                                                         <button type="button"
                                                                 class="btn btn-link text-danger ml-auto"
-                                                                data-dismiss="modal">Close
+                                                                data-dismiss="modal" id="reset">Close
                                                         </button>
                                                     </div>
                                                 </div>
