myPage-tutors_Information : 데이터 삭제

--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
@@ -250,7 +250,7 @@
                                                             No.
                                                         </button>
                                                         <form id="withdrawal">
-                                                            <button type="submit" class="btn btn-sm btn-secondary" id="withdrawal-btn">
+                                                            <button type="submit" class="btn btn-sm btn-secondary" id="delete">
                                                                 Yes, I will unsubscribe.
                                                             </button>
                                                         </form>
