spring security 제외하고 jwt토큰에만 집중

--- a/src/main/resources/templates/html/dashboard/myPage-admin.html
+++ b/src/main/resources/templates/html/dashboard/myPage-admin.html
@@ -251,6 +251,7 @@
 <script src="/js/spaces.js"></script>
 
 <script type="text/javascript" th:inline="javascript" src="/js/mypage-admin.js"></script>
+<script src="/js/move.js"></script>
 
 </body>
 
