--- a/src/main/resources/templates/html/Email-Token.html
+++ b/src/main/resources/templates/html/Email-Token.html
@@ -53,7 +53,7 @@
                             <form id="emailTokenForm">
                                 <!-- Form -->
                                 <div class="form-group">
-                                    <label>Token 입력</label>
+                                    <label>인증코드 입력</label>
                                     <div class="form-group">
                                         <div class="input-group mb-4">
                                             <div class="input-group-prepend">
