--- a/src/main/resources/templates/html/sign-up-tutee.html
+++ b/src/main/resources/templates/html/sign-up-tutee.html
@@ -48,7 +48,7 @@
           <div class="col-12 d-flex align-items-center justify-content-center">
             <div
               class="signin-inner mt-3 mt-lg-0 bg-white shadow-soft border rounded border-light p-4 p-lg-5 w-100 fmxw-500">
-              <form action="/members/signup/email" method="post" id="signInForm">
+              <form id="signUpForm">
                 <!-- Form -->
                 <div class="form-group">
                   <label for="email">이메일<span class="txt-error email"
@@ -134,7 +134,7 @@
                     </label>
                   </div>
                 </div>
-                <button type="submit" class="btn btn-block btn-primary" id="create-account">
+                <button type="button" class="btn btn-block btn-primary" id="create-account">
                   Create an account
                 </button>
               </form>
