오타수정, emailAuthr기능 추가

--- a/src/main/resources/templates/html/sign-up-tutee.html
+++ b/src/main/resources/templates/html/sign-up-tutee.html
@@ -131,7 +131,7 @@
                     </label>
                   </div>
                 </div>
-                <button type="submit" class="btn btn-block btn-primary" id="create-account">
+                <button type="button" class="btn btn-block btn-primary" id="create-account">
                   Create an account
                 </button>
               </form>
