욕설 필터링 기능 개발

--- a/topicsation_class/src/public/views/classroom.mustache
+++ b/topicsation_class/src/public/views/classroom.mustache
@@ -120,34 +120,36 @@
             >
               <h4>Today's News</h4>
               <div class="card mb-5 mt-2">
-                <h5 class="m-2">News Title</h5>
+                <h5 class="m-2" id="today_title">News Title</h5>
                 <button
                   type="button"
                   class="btn btn-primary col-sm-4 m-2"
                   style="background-color: #0056b3; border: none"
-                  id="todayNews"
+                  id="todayNewsBtn"
                 >
                   See on article
                 </button>
               </div>
               <h4>Recommend News</h4>
               <div class="card mb-2 mt-2">
-                <h5 class="m-2">News Title</h5>
+                <h5 class="m-2" id="first_title">News Title</h5>
                 <button
-                  type="submit"
+                  type="button"
                   class="btn btn-primary col-sm-4 m-2"
                   style="background-color: #26408b; border: none"
+                  id="firstNewsBtn"
                 >
                   See on article
                 </button>
               </div>
               <br />
               <div class="card mb-2 mt-2">
-                <h5 class="m-2">News Title</h5>
+                <h5 class="m-2" id="second_title">News Title</h5>
                 <button
-                  type="submit"
+                  type="button"
                   class="btn btn-primary col-sm-4 m-2"
                   style="background-color: #26408b; border: none"
+                  id="secondNewsBtn"
                 >
                   See on article
                 </button>
