myPage admin : 승인 및 거부

--- a/src/main/resources/templates/html/dashboard/myPage-admin.html
+++ b/src/main/resources/templates/html/dashboard/myPage-admin.html
@@ -70,7 +70,7 @@
                             </div>
                             <h2 class="h5 font-weight-normal text-center mt-3 mb-0">Admin</h2>
                             <div class="list-group dashboard-menu list-group-sm mt-4">
-                                <a href="myPage-admin.html"
+                                <a href="/mypage/admin" id="manage-tutor"
                                    class="d-flex list-group-item list-group-item-action active">Manage Tutors<span
                                         class="icon icon-xs ml-auto"><span
                                         class="fas fa-chevron-right"></span></span> </a>
