--- a/src/main/resources/templates/html/sign-up-tutee.html
+++ b/src/main/resources/templates/html/sign-up-tutee.html
@@ -52,12 +52,12 @@
                 <!-- Form -->
                 <div class="form-group">
                   <label for="email">이메일<span class="txt-error email"
-                      style="padding-left:10px; font-size:13px;"></span></label>
+                      style="padding-left:10px; font-size:13px;" autocomplete="off"></span></label>
                   <div class="input-group mb-4">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><span class="fas fa-envelope"></span></span>
                     </div>
-                    <input class="form-control" id="email" placeholder="@E-mail" type="text" aria-label="email adress"
+                    <input class="form-control" id="email" name="email" placeholder="@E-mail" type="text" aria-label="email adress"
                       autocomplete="off" required />
                   </div>
                   <!-- <p class="txt-error email" devTailMsg=""></p> -->
@@ -73,7 +73,7 @@
                           <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
                         </svg></span>
                     </div>
-                    <input class="form-control" id="name" placeholder="Name" type="text" aria-label="name" required />
+                    <input class="form-control" id="name" name="name" placeholder="Name" type="text" aria-label="name" autocomplete="off" required />
                   </div>
                 </div>
                 <!-- End of Form -->
@@ -86,7 +86,7 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text"><span class="fas fa-unlock-alt"></span></span>
                       </div>
-                      <input class="form-control" id="password" placeholder="Password" type="password"
+                      <input class="form-control" id="password" name="password" placeholder="Password" type="password"
                         aria-label="Password" required />
                     </div>
                   </div>
@@ -99,14 +99,14 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text"><span class="fas fa-unlock-alt"></span></span>
                       </div>
-                      <input class="form-control" id="password-confirm" placeholder="Confirm password" type="password"
-                        aria-label="Password" name="password_confirm" />
+                      <input class="form-control" id="password-confirm" name="passwordConfirm" placeholder="Confirm password" type="password"
+                        aria-label="Password" />
                     </div>
                   </div>
                   <!-- 관심사 입력 -->
                   <div class="form-group">
                     <label>관심사</label>
-                    <select class="custom-select" id="first-interest" required>
+                    <select class="custom-select" id="first-interest" name="firstInterest" required>
                       <option value="" disabled selected style="display:none">첫번째 관심사</option>
                       <option value="politics">정치</option>
                       <option value="economics">경제</option>
@@ -116,7 +116,7 @@
                     </select>
                   </div>
                   <div class="form-group">
-                    <select class="custom-select" id="second-interest" required>
+                    <select class="custom-select" id="second-interest" name="secondInterest" required>
                       <option value="" disabled selected style="display:none">두번째 관심사</option>
                       <option value="politics">정치</option>
                       <option value="economics">경제</option>
@@ -134,7 +134,7 @@
                     </label>
                   </div>
                 </div>
-                <button type="button" class="btn btn-block btn-primary" id="create-account">
+                <button type="submit" class="btn btn-block btn-primary" id="create-account">
                   Create an account
                 </button>
               </form>
