--- a/src/main/resources/templates/html/main.html
+++ b/src/main/resources/templates/html/main.html
@@ -186,7 +186,7 @@
     </div>
 </footer>
 
-<script src="/js/main.js"></script>
+<script type="module" src="/js/main.js"></script>
 
 <!-- Core -->
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
